--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -31,8 +31,7 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
-        run: |
-git clone https://github.com/AbyssServices/Abyss-Web
+        run: 
 cd Abyss-Web
 npm i
 npm start
