--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,11 +27,9 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: npm start
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: 
-cd Abyss-Web
-npm i
-npm start
+    
